--- a/b2win-APP/pubspec.yaml
+++ b/b2win-APP/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   shared_preferences: ^2.2.3
   dart_jsonwebtoken: ^2.14.2
   flutter_form_builder: ^9.2.1
-  form_builder_validators: 11.1.2
+  form_builder_validators: ^9.1.0
   carousel_slider: ^5.0.0
   file_picker: ^8.0.5
   path_provider: ^2.1.4
