--- a/b2win-APP/pubspec.yaml
+++ b/b2win-APP/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   file_picker: ^8.0.5
   path_provider: ^2.1.4
   image_picker: ^1.1.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
