Live Stream UI and Scoreboard Page Updates
work of 18th and 19th  April 2025

--- a/b2win-APP/pubspec.yaml
+++ b/b2win-APP/pubspec.yaml
@@ -16,7 +16,7 @@ description: "A new Flutter project."
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.6.0+18
+version: 1.6.0+19
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -47,6 +47,8 @@ dependencies:
   path_provider: ^2.1.4
   image_picker: ^1.1.2
   provider: ^6.1.2
+  camera: ^0.10.5+3
+  youtube_player_iframe: ^5.2.1
 
 dev_dependencies:
   flutter_test:
