--- a/b2win-APP/pubspec.yaml
+++ b/b2win-APP/pubspec.yaml
@@ -16,7 +16,7 @@ description: "A new Flutter project."
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.6.0+26
+version: 1.6.0+27
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   webview_flutter: ^4.10.0
   flutter_launcher_icons: ^0.13.1
-  http: ^0.13.6
+  http: ^1.3.0
   shared_preferences: ^2.2.3
   dart_jsonwebtoken: ^2.14.2
   flutter_form_builder: ^9.2.1
@@ -49,6 +49,9 @@ dependencies:
   provider: ^6.1.2
   camera: ^0.10.5+3
   youtube_player_iframe: ^5.2.1
+  google_sign_in: ^6.2.1
+  googleapis: ^13.1.0
+  googleapis_auth: ^1.5.1
 
 dev_dependencies:
   flutter_test:
