Commentary Page and Live Streaming changes
work of 30th April 2025

--- a/b2win-APP/android/app/src/main/AndroidManifest.xml
+++ b/b2win-APP/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.itisiya.b2win">
   <uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.CAMERA" />
 <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -6,7 +6,6 @@
 <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- Optional: For keeping screen on -->
     <application
         android:label="b2win.AI"
-        android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -35,7 +34,9 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.gms.version"
-    android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version" />
+
+
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility?hl=en and
