--- a/b2win-APP/pubspec.yaml
+++ b/b2win-APP/pubspec.yaml
@@ -16,7 +16,7 @@ description: "A new Flutter project."
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.6.0+27
+version: 1.6.0+28
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  webview_flutter: ^4.10.0
+  webview_flutter: ^4.2.2
   flutter_launcher_icons: ^0.13.1
   http: ^1.3.0
   shared_preferences: ^2.2.3
@@ -47,14 +47,11 @@ dependencies:
   path_provider: ^2.1.4
   image_picker: ^1.1.2
   provider: ^6.1.2
-  camera: ^0.10.5+3
-  youtube_player_iframe: ^5.2.1
-  google_sign_in: ^6.2.1
-  googleapis: ^13.1.0
-  googleapis_auth: ^1.5.1
-  flutter_secure_storage: ^8.0.0
-  encrypt: ^5.0.1
-  pointycastle: ^3.6.2
+  camera: ^0.11.0+2
+  youtube_player_flutter: ^9.1.1
+  flutter_inappwebview: ^6.0.0-beta.24
+  permission_handler: ^11.3.1
+  apivideo_live_stream: ^1.2.0
 
 dev_dependencies:
   flutter_test:
